<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top" />

    <Button
        android:id="@+id/btnMid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mid" />

    <Button
        android:id="@+id/btnBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom" />

    <Button
        android:id="@+id/btnMiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miss" />

</LinearLayout>