<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right|top"
        android:orientation="vertical"
        android:paddingRight="50dp" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|fill_vertical"
            android:orientation="vertical" >


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="36pt" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="500dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="36pt" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamnum"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="36pt" />

            <EditText
                android:id="@+id/etTeamNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="36pt"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/matchnum"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="36pt" />

            <EditText
                android:id="@+id/etMatchNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="36pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/robotcolor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="36pt" />

            <RadioGroup
                android:id="@+id/rgRobotC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.13"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rbRed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:textSize="20pt"
                    android:textColor="#f00"
                    android:text="Red" />

                <RadioButton
                    android:id="@+id/rbBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20pt"
                    android:textColor="#00f"
                    android:text="Blue" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/enter" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outputxml" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>